<resources>
    <string name="app_name">MaoMakis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mi_app_de_delivery">Mi app de Delivery</string>
    <string name="MAO_MAKIS" />
    <string name="app_de_delivery">App de delivery</string>
    <string name="register">Register</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="login">Login</string>
    <string name="mao_makis">Mao Makis</string>
    <string name="full_name">full_name</string>
    <string name="correo">Correo</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="reg_strate">Regístrate</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="platos_del_d_a">Platos del día</string>
    <string name="favorito">Favorito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_carta">Mi Carta</string>
    <string name="s_t_c">S T C</string>
    <string name="prueba_maomakis_com">prueba@maomakis.com</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="tu_comida_favorita">Tu comida favorita</string>
    <string name="ver_m_s">Ver más</string>
    <string name="_10_delicias_de_fin_de_semana_ndinner_recipes">10 delicias de fin de semana \nDinner Recipes</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="search_your_food">Search your Food</string>

    <string name="order_now_text">Hacer pedido</string>

    <string name="desc_back_button">Botón para regresar a la pantalla anterior</string>
    <string name="desc_detail_image">Imagen principal del producto</string>
    <string name="desc_small_image">Imagen en miniatura del producto</string>
    <string name="todo">TODO</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="currency_format">S/ %1$.2f</string>
    <string name="que_deseas_hoy">¿Qué deseas hoy?</string>
    <string name="buscar_tu_comida">Buscar tu comida</string>
    <string name="hola">Hola</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
</resources>